--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -6,6 +6,7 @@
         <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text><text y=%221.3em%22 x=%220.2em%22 font-size=%2276%22 fill=%22%23fff%22>sf</text></svg>">
 
         {% block stylesheets %}
+            {{ encore_entry_link_tags('app') }}
         <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
         <link rel="stylesheet" href="{{asset('dist/styles.css') }}">
         {% endblock %}
@@ -51,7 +52,7 @@
 
     <footer class="bg-gray-800 text-white text-center p-4">
         {% block footer %}
-            <p> 2024 - TORINO INDUSTRY</p> 
+            <p> 2024 - TORINO INDUSTRY</p>
         {% endblock %}
     </footer>
 
